--- a/reactiontimer.html
+++ b/reactiontimer.html
@@ -16,7 +16,7 @@
                 
                 width: 200px;
                 height: 200px;
-                background-color: red;
+                background-color: blue;
                 display: none;
                 position: relative;
                 
